fixed text layout on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -45,8 +45,33 @@ header{
         z-index: 0;
         display: block;  
     }
+    /** fix height for mobile devices that don't like the vh height measurement **/
+    /** iPad with portrait orientation. **/
+    @media all and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait){
+        height: 1024px;
+    }
+    /** iPad with landscape orientation. **/
+    @media all and (device-width: 768px) and (device-height: 1024px) and (orientation:landscape){
+        height: 768px;
+    }
+    /** iPhone 7/6 Plus with landscape orientation. **/
+    @media all and (device-width: 736) and (device-height: 414) and (orientation:landscape){
+        height: 414px;
+        width: auto;
+        background-attachment: scroll;
+        background-size: contain;
+    }
+    /** iPhone 7/6 with landscape orientation. **/
+    @media all and (device-width: 667) and (device-height: 375) and (orientation:landscape){
+        height: 375px;
+    }
+
     .welcome {
-        @media all and (max-width: 992px) and (min-width: 480px) {
+        @media all and (max-width: 768px) and (min-width: 480px) {
+            margin-top: 30px;
+            display: inline-block;
+        }
+        @media all and (max-width: 992px) and (min-width: 768px) {
             position: absolute;
             top: 50%;
         }
